TP-Final-Montreal v3

--- a/index.html
+++ b/index.html
@@ -69,6 +69,38 @@
     </section>
     <!-- Fin section 2 -->
 
+    <!-- Début section 3 -->
+    <section class="section3">
+        <div class="projects">
+            <img src="./assets/projects.png.png" alt="icône projects">
+            <h2>258</h2>
+            <p>COMPLETED PROJECTS</p>
+        </div>
+
+        <div class="coffee">
+            <img src="./assets/coffee.png.png" alt="icône coffee">
+            <h2>736</h2>
+            <p>DRINKED COFFEE</p>
+        </div>
+
+        <div class="mail">
+            <img src="./assets/mail.png.png" alt="icône mail">
+            <h2>358</h2>
+            <p>MAILS SEND</p>
+        </div>
+
+        <div class="awards">
+            <img src="./assets/awards.png.png" alt="icône awards">
+            <h2>35</h2>
+            <p>AWARDS TAKEN</p>
+        </div>
+    </section>
+    <!-- Fin section 3 -->
+
+    <!-- Début section 4 -->
+    
+
+
     <script src="./menuBurger.js"></script>
 </body>
 
