TP-Final-Montreal v4

--- a/index.html
+++ b/index.html
@@ -98,7 +98,45 @@
     <!-- Fin section 3 -->
 
     <!-- Début section 4 -->
-    
+    <section class="section4">
+        <div class="works">
+            <h3>WORKS SO FAR</h3>
+            <h4>Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.</h4>
+        </div>
+
+        <div class="pictures">
+            <img src="./assets/div.png" alt="photo loupe">
+            <div class="topPictures">
+                <img src="./assets/div#deux.png" alt="photo schéma">
+                <img src="./assets/div#trois.png" alt="photo pc">
+            </div>
+            <div class="bottomPictures">
+                <img src="./assets/div#quatre.png" alt="photo logo">
+                <img src="./assets/div#cinq.png" alt="photo code">
+            </div>
+        </div>
+    </section>
+    <!-- Fin section 4 -->
+
+    <!-- Début section 5 -->
+    <section class="section5">
+        <h2>OUR CLIENTS</h2>
+        <p>Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
+        <div class="brands">
+            <img src="./assets/Logo%201.png.png" alt="logo Simple Star">
+            <img src="./assets/Logo%202.png.png" alt="logo The Lab">
+            <img src="./assets/Logo%203.png.png" alt="logo Eshley Jud">
+            <img src="./assets/Logo%204.png.png" alt="logo Timber Style">
+        </div>
+    </section>
+    <!-- Fin section 5 -->
+
+    <!-- Début section 6 -->
+    <section class="section6">
+        <h2>CONTACT US </h2>
+        <p>Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
+        
+    </section>
 
 
     <script src="./menuBurger.js"></script>
