TP-Final-Montreal HTML fait

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
     <!-- Début section 1 -->
     <section class="section1">
-        <p>“Donec rutrum congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.”</p>
+        <p>“Donec rutrum congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at
+            tellus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.”</p>
     </section>
     <!-- Fin section 1 -->
 
@@ -51,7 +52,8 @@
         <div class="design">
             <img src="./assets/design.png.png" alt="icône design">
             <h2>DESIGN</h2>
-            <p>Soluta consequat no has. Has ex deleniti consulatu, tamquam interpretaris sit ex vivendum ullamcorper et his.</p>
+            <p>Soluta consequat no has. Has ex deleniti consulatu, tamquam interpretaris sit ex vivendum ullamcorper et
+                his.</p>
         </div>
 
         <div class="coding">
@@ -63,7 +65,8 @@
         <div class="apps">
             <img src="./assets/apps.png.png" alt="icône apps">
             <h2>APPS</h2>
-            <p>Soluta consequat no has. Has ex deleniti consulatu, tamquam interpretaris sit ex vivendum ullamcorper et his.</p>
+            <p>Soluta consequat no has. Has ex deleniti consulatu, tamquam interpretaris sit ex vivendum ullamcorper et
+                his.</p>
         </div>
         <button>LAUNCH PROJECT NOW</button>
     </section>
@@ -101,18 +104,19 @@
     <section class="section4">
         <div class="works">
             <h3>WORKS SO FAR</h3>
-            <h4>Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.</h4>
+            <h4>Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.
+                Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.</h4>
         </div>
 
         <div class="pictures">
             <img src="./assets/div.png" alt="photo loupe">
             <div class="topPictures">
-                <img src="./assets/div#deux.png" alt="photo schéma">
-                <img src="./assets/div#trois.png" alt="photo pc">
+                <img src="./assets/divDeux.png" alt="photo schéma">
+                <img src="./assets/divTrois.png" alt="photo pc">
             </div>
             <div class="bottomPictures">
-                <img src="./assets/div#quatre.png" alt="photo logo">
-                <img src="./assets/div#cinq.png" alt="photo code">
+                <img src="./assets/divQuatre.png" alt="photo logo">
+                <img src="./assets/divCinq.png" alt="photo code">
             </div>
         </div>
     </section>
@@ -121,12 +125,13 @@
     <!-- Début section 5 -->
     <section class="section5">
         <h2>OUR CLIENTS</h2>
-        <p>Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
+        <p>Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent
+            sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
         <div class="brands">
-            <img src="./assets/Logo%201.png.png" alt="logo Simple Star">
-            <img src="./assets/Logo%202.png.png" alt="logo The Lab">
-            <img src="./assets/Logo%203.png.png" alt="logo Eshley Jud">
-            <img src="./assets/Logo%204.png.png" alt="logo Timber Style">
+            <img src="./assets/Logo201.png.png" alt="logo Simple Star">
+            <img src="./assets/Logo202.png.png" alt="logo The Lab">
+            <img src="./assets/Logo203.png.png" alt="logo Eshley Jud">
+            <img src="./assets/Logo204.png.png" alt="logo Timber Style">
         </div>
     </section>
     <!-- Fin section 5 -->
@@ -134,11 +139,49 @@
     <!-- Début section 6 -->
     <section class="section6">
         <h2>CONTACT US </h2>
-        <p>Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
-        
+        <p>Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent
+            sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
+        <div class="contentContact">
+            <input type="text" class="form-control" placeholder="Prénom" aria-label="Prénom"
+                aria-describedby="addon-wrapping">
+            <input type="text" class="form-control" placeholder="Nom" aria-label="Nom"
+                aria-describedby="addon-wrapping">
+            <input type="text" class="form-control" placeholder="Objet" aria-label="Objet"
+                aria-describedby="addon-wrapping">
+            <input type="text" class="form-control" placeholder="Message" aria-label="Message"
+                aria-describedby="addon-wrapping">
+            <button class="btn btn-primary" type="submit">Envoyer</button>
+        </div>
     </section>
+    <!-- Fin section 6 -->
+    <footer class="footer">
+        <div class="topFooter">
+            <div class="whats">
+                <img src="./assets/whats.png.png" alt="icône whats">
+                <p>347-939-9359</p>
+            </div>
 
+            <div class="mailfooter">
+                <img src="./assets/mailfooter.png.png" alt="icône mail footer">
+                <p>montreal@gmail.com</p>
+            </div>
 
+            <div class="globe">
+                <img src="./assets/globe.png.png" alt="icône globe">
+                <p>4116 Oak Avenue Chicago, IL 60607</p>
+            </div>
+        </div>
+        <div class="bottomFooter">
+            <p>@2016 - Montreal All Right Reserved</p>
+            <div class="socialNetworks">
+                <img src="./assets/Facebook.png.png" alt="icône facebook">
+                <img src="./assets/Twitter.png.png" alt="icône twitter">
+                <img src="./assets/Dribble.png.png" alt="icône dribble">
+                <img src="./assets/Google.png.png" alt="icône google">
+                <img src="./assets/Youtube.png.png" alt="icône youtube">
+            </div>
+        </div>
+    </footer>
     <script src="./menuBurger.js"></script>
 </body>
 
