TP-Final-Montreal v8

--- a/index.html
+++ b/index.html
@@ -51,24 +51,28 @@
 
     <!-- Début section 2 -->
     <section class="section2">
-        <div class="design">
-            <img src="./assets/design.png.png" alt="icône design">
-            <h2>DESIGN</h2>
-            <p>Soluta consequat no has. Has ex deleniti consulatu, tamquam interpretaris sit ex vivendum ullamcorper et
-                his.</p>
-        </div>
+        <div class="threeBoxes">
+            <div class="design">
+                <img src="./assets/design.png.png" alt="icône design">
+                <h2>DESIGN</h2>
+                <p>Soluta consequat no has. Has ex deleniti consulatu, tamquam interpretaris sit ex vivendum ullamcorper
+                    et
+                    his.</p>
+            </div>
 
-        <div class="coding">
-            <img src="./assets/coding.png.png" alt="icône coding">
-            <h2>CODING</h2>
-            <p>Soluta consequat no has. Has ex deleniti consulatu, tamquam.</p>
-        </div>
+            <div class="coding">
+                <img src="./assets/coding.png.png" alt="icône coding">
+                <h2>CODING</h2>
+                <p>Soluta consequat no has. Has ex deleniti consulatu, tamquam.</p>
+            </div>
 
-        <div class="apps">
-            <img src="./assets/apps.png.png" alt="icône apps">
-            <h2>APPS</h2>
-            <p>Soluta consequat no has. Has ex deleniti consulatu, tamquam interpretaris sit ex vivendum ullamcorper et
-                his.</p>
+            <div class="apps">
+                <img src="./assets/apps.png.png" alt="icône apps">
+                <h2>APPS</h2>
+                <p>Soluta consequat no has. Has ex deleniti consulatu, tamquam interpretaris sit ex vivendum ullamcorper
+                    et
+                    his.</p>
+            </div>
         </div>
         <button>LAUNCH PROJECT NOW</button>
     </section>
