TP Final Montreal v9

--- a/index.html
+++ b/index.html
@@ -110,17 +110,15 @@
     <section class="section4">
         <div class="works">
             <h3>WORKS SO FAR</h3>
-            <h4>Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.
-                Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.</h4>
+            <p>Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.
+                Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
         </div>
 
         <div class="pictures">
             <img src="./assets/div.png" alt="photo loupe">
-            <div class="topPictures">
+            <div class="smallPictures">
                 <img src="./assets/divDeux.png" alt="photo schéma">
-                <img src="./assets/divTrois.png" alt="photo pc">
-            </div>
-            <div class="bottomPictures">
+                <img src="./assets/divTrois.png" alt="photo pc">            
                 <img src="./assets/divQuatre.png" alt="photo logo">
                 <img src="./assets/divCinq.png" alt="photo code">
             </div>
