TP Final Montreal v10

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <img src="./assets/div.png" alt="photo loupe">
             <div class="smallPictures">
                 <img src="./assets/divDeux.png" alt="photo schéma">
-                <img src="./assets/divTrois.png" alt="photo pc">            
+                <img src="./assets/divTrois.png" alt="photo pc">
                 <img src="./assets/divQuatre.png" alt="photo logo">
                 <img src="./assets/divCinq.png" alt="photo code">
             </div>
@@ -128,9 +128,13 @@
 
     <!-- Début section 5 -->
     <section class="section5">
-        <h2>OUR CLIENTS</h2>
-        <p>Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent
-            sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
+        <div class="customers">
+            <h2>OUR CLIENTS</h2>
+            <p>Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.
+                Praesent
+                sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
+        </div>
+
         <div class="brands">
             <img src="./assets/Logo201.png.png" alt="logo Simple Star">
             <img src="./assets/Logo202.png.png" alt="logo The Lab">
