TP Final Montreal v11

--- a/index.html
+++ b/index.html
@@ -146,19 +146,30 @@
 
     <!-- Début section 6 -->
     <section class="section6">
-        <h2>CONTACT US </h2>
-        <p>Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent
-            sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
+        <div class="contact">
+            <h2>CONTACT US </h2>
+            <p>Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.
+                Praesent
+                sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
+        </div>
         <div class="contentContact">
+            <p>Prénom</p>
             <input type="text" class="form-control" placeholder="Prénom" aria-label="Prénom"
                 aria-describedby="addon-wrapping">
+            <p>Nom</p>
             <input type="text" class="form-control" placeholder="Nom" aria-label="Nom"
                 aria-describedby="addon-wrapping">
+            <p>Objet</p>
             <input type="text" class="form-control" placeholder="Objet" aria-label="Objet"
                 aria-describedby="addon-wrapping">
-            <input type="text" class="form-control" placeholder="Message" aria-label="Message"
-                aria-describedby="addon-wrapping">
-            <button class="btn btn-primary" type="submit">Envoyer</button>
+            <div class="message">
+                <p>Message</p>
+                <input type="text" class="form-control" aria-label="Message"
+                    aria-describedby="addon-wrapping">
+            </div>
+            <div class="send">
+                <button class="btn btn-primary" type="submit">Envoyer</button>
+            </div>
         </div>
     </section>
     <!-- Fin section 6 -->
