TP Final Montreal v12

--- a/index.html
+++ b/index.html
@@ -164,8 +164,7 @@
                 aria-describedby="addon-wrapping">
             <div class="message">
                 <p>Message</p>
-                <input type="text" class="form-control" aria-label="Message"
-                    aria-describedby="addon-wrapping">
+                <input type="text" class="form-control" aria-label="Message" aria-describedby="addon-wrapping">
             </div>
             <div class="send">
                 <button class="btn btn-primary" type="submit">Envoyer</button>
@@ -173,14 +172,16 @@
         </div>
     </section>
     <!-- Fin section 6 -->
-    <footer class="footer">
-        <div class="topFooter">
+
+    <!-- Début section 7 -->
+    <section class="section7">
+        <div class="contactDetails">
             <div class="whats">
                 <img src="./assets/whats.png.png" alt="icône whats">
                 <p>347-939-9359</p>
             </div>
 
-            <div class="mailfooter">
+            <div class="mail">
                 <img src="./assets/mailfooter.png.png" alt="icône mail footer">
                 <p>montreal@gmail.com</p>
             </div>
@@ -190,17 +191,21 @@
                 <p>4116 Oak Avenue Chicago, IL 60607</p>
             </div>
         </div>
-        <div class="bottomFooter">
-            <p>@2016 - Montreal All Right Reserved</p>
-            <div class="socialNetworks">
-                <img src="./assets/Facebook.png.png" alt="icône facebook">
-                <img src="./assets/Twitter.png.png" alt="icône twitter">
-                <img src="./assets/Dribble.png.png" alt="icône dribble">
-                <img src="./assets/Google.png.png" alt="icône google">
-                <img src="./assets/Youtube.png.png" alt="icône youtube">
-            </div>
+    </section>
+    <!-- Fin section 7 -->
+
+    <!-- Début du footer-->
+    <footer class="footer">
+        <p>@2016 - <span style="color: #FFDA00">Montreal</span> All Right Reserved</p>
+        <div class="socialNetworks">
+            <img src="./assets/Facebook.png.png" alt="icône facebook">
+            <img src="./assets/Twitter.png.png" alt="icône twitter">
+            <img src="./assets/Dribble.png.png" alt="icône dribble">
+            <img src="./assets/Google.png.png" alt="icône google">
+            <img src="./assets/Youtube.png.png" alt="icône youtube">
         </div>
     </footer>
+    <!-- Fin du footer -->
     <script src="./menuBurger.js"></script>
 </body>
 
