TP Final Montreal v13

--- a/index.html
+++ b/index.html
@@ -80,28 +80,30 @@
 
     <!-- Début section 3 -->
     <section class="section3">
-        <div class="projects">
-            <img src="./assets/projects.png.png" alt="icône projects">
-            <h2>258</h2>
-            <p>COMPLETED PROJECTS</p>
-        </div>
+        <div class="allSkills">
+            <div class="projects">
+                <img src="./assets/projects.png.png" alt="icône projects">
+                <h2>258</h2>
+                <p>COMPLETED PROJECTS</p>
+            </div>
 
-        <div class="coffee">
-            <img src="./assets/coffee.png.png" alt="icône coffee">
-            <h2>736</h2>
-            <p>DRINKED COFFEE</p>
-        </div>
+            <div class="coffee">
+                <img src="./assets/coffee.png.png" alt="icône coffee">
+                <h2>736</h2>
+                <p>DRINKED COFFEE</p>
+            </div>
 
-        <div class="mail">
-            <img src="./assets/mail.png.png" alt="icône mail">
-            <h2>358</h2>
-            <p>MAILS SEND</p>
-        </div>
+            <div class="mail">
+                <img src="./assets/mail.png.png" alt="icône mail">
+                <h2>358</h2>
+                <p>MAILS SEND</p>
+            </div>
 
-        <div class="awards">
-            <img src="./assets/awards.png.png" alt="icône awards">
-            <h2>35</h2>
-            <p>AWARDS TAKEN</p>
+            <div class="awards">
+                <img src="./assets/awards.png.png" alt="icône awards">
+                <h2>35</h2>
+                <p>AWARDS TAKEN</p>
+            </div>
         </div>
     </section>
     <!-- Fin section 3 -->
@@ -160,7 +162,7 @@
             <input type="text" class="form-control" placeholder="Nom" aria-label="Nom"
                 aria-describedby="addon-wrapping">
             <p>Objet</p>
-            <input type="text" class="form-control" placeholder="Objet" aria-label="Objet"
+            <input type="text" class="form-control" placeholder="Je veux un objet" aria-label="Objet"
                 aria-describedby="addon-wrapping">
             <div class="message">
                 <p>Message</p>
