TP Final Montreal v14

--- a/index.html
+++ b/index.html
@@ -83,25 +83,25 @@
         <div class="allSkills">
             <div class="projects">
                 <img src="./assets/projects.png.png" alt="icône projects">
-                <h2>258</h2>
+                <p><script src="./compteur.js"></script></p>
                 <p>COMPLETED PROJECTS</p>
             </div>
 
             <div class="coffee">
                 <img src="./assets/coffee.png.png" alt="icône coffee">
-                <h2>736</h2>
+                <div class="sectionNumbers__number number2"></div>
                 <p>DRINKED COFFEE</p>
             </div>
 
             <div class="mail">
                 <img src="./assets/mail.png.png" alt="icône mail">
-                <h2>358</h2>
+                <div class="sectionNumbers__number number3"></div>
                 <p>MAILS SEND</p>
             </div>
 
             <div class="awards">
                 <img src="./assets/awards.png.png" alt="icône awards">
-                <h2>35</h2>
+                <div class="sectionNumbers__number number4"></div>
                 <p>AWARDS TAKEN</p>
             </div>
         </div>
@@ -209,6 +209,7 @@
     </footer>
     <!-- Fin du footer -->
     <script src="./menuBurger.js"></script>
+    <!-- <script src="./compteur.js"></script> -->
 </body>
 
 </html>
