TP Final Montreal v15

--- a/index.html
+++ b/index.html
@@ -80,28 +80,28 @@
 
     <!-- Début section 3 -->
     <section class="section3">
-        <div class="allSkills">
+        <div id="allSkills">
             <div class="projects">
                 <img src="./assets/projects.png.png" alt="icône projects">
-                <p><script src="./compteur.js"></script></p>
+                <h2 id="randomNumber"></h2>
                 <p>COMPLETED PROJECTS</p>
             </div>
 
             <div class="coffee">
                 <img src="./assets/coffee.png.png" alt="icône coffee">
-                <div class="sectionNumbers__number number2"></div>
+                <h2 id="randomNumber"></h2>
                 <p>DRINKED COFFEE</p>
             </div>
 
             <div class="mail">
                 <img src="./assets/mail.png.png" alt="icône mail">
-                <div class="sectionNumbers__number number3"></div>
+                <h2 id="randomNumber"></h2>
                 <p>MAILS SEND</p>
             </div>
 
             <div class="awards">
                 <img src="./assets/awards.png.png" alt="icône awards">
-                <div class="sectionNumbers__number number4"></div>
+                <h2 id="randomNumber"></h2>
                 <p>AWARDS TAKEN</p>
             </div>
         </div>
@@ -209,7 +209,7 @@
     </footer>
     <!-- Fin du footer -->
     <script src="./menuBurger.js"></script>
-    <!-- <script src="./compteur.js"></script> -->
+    <script src="./compteur.js"></script>
 </body>
 
 </html>
