TP Final Montreal v16

--- a/index.html
+++ b/index.html
@@ -81,25 +81,25 @@
     <!-- Début section 3 -->
     <section class="section3">
         <div id="allSkills">
-            <div class="projects">
+            <div id="skill">
                 <img src="./assets/projects.png.png" alt="icône projects">
                 <h2 id="randomNumber"></h2>
                 <p>COMPLETED PROJECTS</p>
             </div>
 
-            <div class="coffee">
+            <div id="skill">
                 <img src="./assets/coffee.png.png" alt="icône coffee">
                 <h2 id="randomNumber"></h2>
                 <p>DRINKED COFFEE</p>
             </div>
 
-            <div class="mail">
+            <div id="skill">
                 <img src="./assets/mail.png.png" alt="icône mail">
                 <h2 id="randomNumber"></h2>
                 <p>MAILS SEND</p>
             </div>
 
-            <div class="awards">
+            <div id="skill">
                 <img src="./assets/awards.png.png" alt="icône awards">
                 <h2 id="randomNumber"></h2>
                 <p>AWARDS TAKEN</p>
@@ -178,17 +178,17 @@
     <!-- Début section 7 -->
     <section class="section7">
         <div class="contactDetails">
-            <div class="whats">
+            <div id="details">
                 <img src="./assets/whats.png.png" alt="icône whats">
                 <p>347-939-9359</p>
             </div>
 
-            <div class="mail">
+            <div id="details">
                 <img src="./assets/mailfooter.png.png" alt="icône mail footer">
                 <p>montreal@gmail.com</p>
             </div>
 
-            <div class="globe">
+            <div id="details">
                 <img src="./assets/globe.png.png" alt="icône globe">
                 <p>4116 Oak Avenue Chicago, IL 60607</p>
             </div>
