TP Final Montreal v16

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
     <title>Montréal</title>
 </head>
 
@@ -81,27 +84,27 @@
     <!-- Début section 3 -->
     <section class="section3">
         <div id="allSkills">
-            <div id="skill">
+            <div class="skill">
                 <img src="./assets/projects.png.png" alt="icône projects">
-                <h2 id="randomNumber"></h2>
+                <div class="number">225</div>
                 <p>COMPLETED PROJECTS</p>
             </div>
 
-            <div id="skill">
-                <img src="./assets/coffee.png.png" alt="icône coffee">
-                <h2 id="randomNumber"></h2>
+            <div class="skill">
+                <img src="./assets/coffee.png.png" alt="icône projects">
+                <div class="number">154</div>
                 <p>DRINKED COFFEE</p>
             </div>
 
-            <div id="skill">
+            <div class="skill">
                 <img src="./assets/mail.png.png" alt="icône mail">
-                <h2 id="randomNumber"></h2>
+                <div class="number">216</div>
                 <p>MAILS SEND</p>
             </div>
 
-            <div id="skill">
+            <div class="skill">
                 <img src="./assets/awards.png.png" alt="icône awards">
-                <h2 id="randomNumber"></h2>
+                <div class="number">85</div>
                 <p>AWARDS TAKEN</p>
             </div>
         </div>
